2008-06-11  higepon  <higepon@users.sourceforge.jp>

	* library.scm (sort!): Fixed SEGV bug.
	                       In library.scm, we can't use do macro.
	                       Because do macro depend on match macro.

2008-06-10  higepon  <higepon@users.sourceforge.jp>

	* freeproc.cpp (scheme::dynamicWindEx): Added dynamic-wind. It's dummy for psyntax.pp.

2008-06-09  higepon  <higepon@users.sourceforge.jp>

	* VM.cpp : Rewrote multiple values support.

2008-06-06  higepon  <higepon@users.sourceforge.jp>

        * example/grass.scm (make-app): Added Grass interpreter.

2008-06-03  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm (call-with-values): Fixed the bug of (call-with-values (lambda () (values 1 2)) cons).

        * freeproc.cpp (scheme::applyEx): Added argument check.

        * scheme.h (isCallable): Added for apply procedure.

2008-06-02  higepon  <higepon@users.sourceforge.jp>

        * Pair.h (scheme): Rewrote cloneList recut to loop.

        * repl.scm (repl): Added EOF handling for Ctrl-D.

        * VM.cpp (VM::load): Added TRY and CATCH macro.

2008-05-30  higepon  <higepon@users.sourceforge.jp>

        * Port.cpp (TextualOutputPort::putPair): Fixed bug of (write '(quote)).

2008-05-29  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp : Added load for internal use.

2008-05-28  higepon  <higepon@users.sourceforge.jp>

        * library.scm : Added procedure?, with-input-from-file.

2008-05-26  higepon  <higepon@users.sourceforge.jp>

        * Fixed case bug (thx leque).

        * compiler.scm (do): Added do macro using match.

        * read.cpp (Scm_StringToNumber): Fixed the bug for '... .
                                         strtol accept "..." and returns 0.

        * freeproc.cpp (scheme::macroexpandEx): Added macroexpand procedure.

2008-05-24  higepon  <higepon@users.sourceforge.jp>

        * match.scm: Added Andrew Wright's match.

        * library.scm : Added (list? obj) procedure.
