@@ -121,4 +121,9 @@
     (load ,(lambda e (error "load not implemented")))
     (symbol? ,symbol?)
     (dynamic-wind ,(lambda e (error "dynamic-wind not implemented")))
+    (char<=? ,char<=?)
+    (char<? ,char<?)
+    (char>=? ,char>=?)
+    (char>? ,char>?)
+    (read ,(lambda e (error "read not implemented")))
     ))
