@@ -1,28 +1,53 @@
 #!/usr/bin/env gosh
 (define (proc-name->c-proc-name name)
-  (call-with-string-io name
-                       (lambda (in out)
-                         (let loop ([c (read-char in)])
-                           (cond
-                            [(eof-object? c)
-                             (display "Ex" out)]
-                            [else
-                             (case c
-                               [(#\?)
-                                (display "P" out)]
-                               [(#\!) '()]
-                               [(#\/)
-                                (display (char-upcase (read-char in)) out)]
-                               [(#\=)
-                                (display "Eq" out)]
-                               [(#\-)
-                                (let1 c  (read-char in)
-                                  (if (char=? #\> c)
-                                      (display "To" out)
-                                      (display (char-upcase c) out)))]
-                               [else
-                                (display c out)])
-                             (loop (read-char in))])))))
+  (call-with-string-io
+   name
+   (lambda (in out)
+     (define (rec c)
+       (cond
+        [(eof-object? c)
+         (display "Ex" out)]
+        [else
+         (case c
+           [(#\?)
+            (display "P" out)
+            (rec (read-char in))]
+           [(#\>)
+            (let1 c (read-char in)
+              (if (char=? #\= c)
+                  (begin
+                    (display "Ge" out)
+                    (rec (read-char in)))
+                  (begin
+                    (display "Gt" out)
+                    (rec c))))]
+           [(#\<)
+            (let1 c (read-char in)
+              (if (char=? #\= c)
+                  (begin
+                    (display "Le" out)
+                    (rec (read-char in)))
+                  (begin
+                    (display "Lt" out)
+                    (rec c))))]
+           [(#\!)
+            (rec (read-char in))]
+           [(#\/)
+            (display (char-upcase (read-char in)) out)
+            (rec (read-char in))]
+           [(#\=)
+            (display "Eq" out)
+            (rec (read-char in))]
+           [(#\-)
+            (let1 c  (read-char in)
+              (if (char=? #\> c)
+                  (display "To" out)
+                  (display (char-upcase c) out)))
+            (rec (read-char in))]
+           [else
+            (display c out)
+            (rec (read-char in))])]))
+     (rec (read-char in)))))
 
 (define (main args)
   (load "./free-vars-decl.scm")
@@ -37,4 +62,4 @@
     (for-each (lambda (proc) (format #t "     UC(~s),\n" proc)) (reverse procs))
     (display "};\n")
     (display "#endif\n")
-  0))
+    0))
